(Registration steps check symbol) - Fix - FontAwesome Glyph to work on firefox

--- a/web/css/fc_styles.css
+++ b/web/css/fc_styles.css
@@ -1883,6 +1883,10 @@ header nav ul li a.selected {
 	content:"\f00c";
 	display: inline-block;
 	font: normal normal normal normal 14px/1 FontAwesome;
+	font-family: FontAwesome;
+	font-style:  normal;
+	font-weight: normal;
+	line-height: 1;
 	text-rendering:auto;
 	-webkit-font-smoothing: antialiased;
 	padding: 3px 3px;
